[package]
name = "cherrybomb"
version = "0.7.2"
authors = ["BLST Security"]
description = """
Cherrybomb is a CLI tool that helps you avoid undefined user behavior by validating your API specifications.
"""
documentation = "https://github.com/blst-security/cherrybomb"
homepage = "https://blstsecurity.com/"
repository = "https://github.com/blst-security/cherrybomb"
keywords = ["API","security",  "CLI", "OpenAPI",  "scanning"]
categories = ["command-line-utilities","web-programming"]
license = "Apache-2.0"
edition = "2021"
default-run = "cherrybomb"



[[bin]]
name = "cherrybomb"
path = "main.rs"
test = false

#[[bin]]
#name = "oas"
#path = "swagger/src/main.rs"
#test = false

[workspace]

members = [
	"cli",
	"swagger",
]
[dependencies]

cherrybomb-cli = "^0.7.1"
cherrybomb-swagger = "^0.1.1"
clap = { version = "^3", features = ["derive"] }
uuid = { version = "0.8", features = ["v4","serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "^0.3", default-features = false, features = ["alloc"] }
colored = "2.0.0"
url = { version = "2" }
hyper = { version = "^0.14", features = ["http2"] }
httparse = "1.5.1"
dirs="^4"
serde_yaml="^0.8"
reqwest = { version = "^0.11",default_features = false, features = ["json","rustls-tls"] }
strum = "0.23"
strum_macros = "0.23"
base64 = "0.13.0"
regex = "1"
serde_with = "1.11.0"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
