[package]
name = "attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#digest = {path="../digest"}
decider= {path="../decider"}
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","rustls-tls"] ,default-features=false}
tokio = { version = "1", features = ["full"] }
rand = "0.8.0"
uuid = { version = "0.8", features = ["v4","serde"] }
