[package]
name = "attacker"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#digest = {path="../digest"}
mapper = {path="../mapper"}
decider= {path="../decider"}
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "^0.11",default-features=false, features = ["rustls-tls"] }
tokio = { version = "^1", features = ["full"] }
rand = "0.8.0"
uuid = { version = "0.8", features = ["v4","serde"] }
base64 = "0.13.0"
