[package]
name = "cherrybomb-oas"
version = "0.1.2"
authors = ["BLST Security"]
description = """
Cherrybomb OpenAPI Specification (OAS) struct and functions
"""
documentation = "https://github.com/blst-security/cherrybomb"
repository = "https://github.com/blst-security/cherrybomb"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored"]

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4","serde"] } # legacy
colored = { version = "2.0.0", optional = true } # legacy
