[package]
name = "cherrybomb"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
uuid = { version = "0.8", features = ["v4","serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "^0.3", default-features = false, features = ["alloc"] }
mapper = { path = "../mapper" }
decider = { path = "../decider" }
attacker = { path = "../attacker" }
swagger = { path = "../swagger" }
colored = "2.0.0"
url = { version = "2" }
hyper = { version = "^0.14", features = ["http2"] }
hyper-rustls = { git = "https://github.com/rustls/hyper-rustls", features = ["http2"] }
httparse = "1.5.1"

