[package]
name = "cherrybomb-cli"
version = "0.7.0"
edition = "2021"
description = "A helper package for Cherrybomb"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cli"


[dependencies]
clap = { version = "^3", features = ["derive"] }
uuid = { version = "0.8", features = ["v4","serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "^1.0", features = ["full"] }
futures = "0.3"
futures-util = { version = "^0.3", default-features = false, features = ["alloc"] }
#cherrybomb-swagger = "^0.1"
cherrybomb-swagger = {path="../swagger"}
reqwest = { version = "^0.11",default_features = false, features = ["json","rustls-tls"] }
colored = "2.0.0"
url = { version = "2" }
hyper = { version = "^0.14", features = ["http2"] }
httparse = "1.5.1"
dirs="^4"
serde_yaml="^0.8"
