[package]
name = "digest"
version = "0.1.0"
authors = ["GuyL99 <guy123levinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
uuid = { version = "0.8", features = ["v4","serde"] }
url="^2"

