[package]
name = "mapper"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4","serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
url="^2"
colored = "2.0.0"
