[package]
name = "swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
reqwest = { version = "^0.11",default_features = false, features = ["json","rustls-tls"] }
tokio = { version = "^1", features = ["rt-multi-thread","macros"] }
futures = "0.3"
strum = "0.23"
strum_macros = "0.23"
url="^2"
colored = "2.0.0"
base64 = "0.13.0"
regex = "1"
uuid = { version = "0.8", features = ["v4","serde"] }
comfy-table = "6.0.0"
